added completed tasks feature

--- a/src/components/ItemStyling.css
+++ b/src/components/ItemStyling.css
@@ -5,6 +5,10 @@
   padding: 0 1rem;
 }
 
+.is-completed {
+  text-decoration: line-through;
+}
+
 input[type="checkbox"] {
   width: 10px;
   margin-right: 10px;
